refactor: convert accessibility strings to localizable keys
- Update A11yText enum to use English keys instead of Korean text
- Maintain dynamic string functions with Korean text (not auto-extracted)
- Test confirms localization system works correctly

--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -1,7 +1,532 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "" : {
 
+    },
+    "“%@”" : {
+
+    },
+    "«« 실행 중" : {
+
+    },
+    "**설정 > 집중 모드**에서 활성화된 모드가 알림을 차단하고 있지 않은지 확인해 주세요" : {
+
+    },
+    "%@, 남은 시간 %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@, 남은 시간 %2$@"
+          }
+        }
+      }
+    },
+    "%@, 설정 시간 %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@, 설정 시간 %2$@"
+          }
+        }
+      }
+    },
+    "%@, 완료됨" : {
+
+    },
+    "%@, 일시정지됨, 남은 시간 %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@, 일시정지됨, 남은 시간 %2$@"
+          }
+        }
+      }
+    },
+    "%lld" : {
+
+    },
+    "%lld / %lld" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$lld / %2$lld"
+          }
+        }
+      }
+    },
+    "~~B: 소리O, 진동X 는 iOS 정책상 불가~~" : {
+
+    },
+    "~~가설 2-1: 제목/본문 없이 소리만 있는 알림은 배너 없이 소리만 재생됨~~" : {
+
+    },
+    "~~가설 2-4: 동일 ID로 알림 10개 연속 전송 시 배너 1개만 남음~~" : {
+
+    },
+    "~~가설 3-1: 1초 간격 적당한가~~" : {
+
+    },
+    "~~가설 3-4: '대표 배너'로 스팸 느낌을 줄일 수 있는가~~" : {
+
+    },
+    "~~테스트 2-1: 소리만~~" : {
+
+    },
+    "~~테스트 2-4: 동일 ID 연속 알림~~" : {
+
+    },
+    "~~테스트 3-1: 1초 간격~~" : {
+
+    },
+    "~~테스트 3-4: 대표 배너 1개 + 소리 9회~~" : {
+
+    },
+    "00:05:25" : {
+
+    },
+    "A: 소리O, 진동O" : {
+
+    },
+    "a11y.addTimer.createButton" : {
+
+    },
+    "a11y.addTimer.createButtonHint" : {
+
+    },
+    "a11y.addTimer.labelInputHint" : {
+
+    },
+    "a11y.addTimer.labelInputLabel" : {
+
+    },
+    "a11y.addTimer.timeChipHint" : {
+
+    },
+    "a11y.addTimer.timePickerHint" : {
+
+    },
+    "a11y.addTimer.timePickerLabel" : {
+
+    },
+    "a11y.common.emptyInput" : {
+
+    },
+    "a11y.common.notSet" : {
+
+    },
+    "a11y.editPreset.cancelButton" : {
+
+    },
+    "a11y.editPreset.deleteButton" : {
+
+    },
+    "a11y.editPreset.saveButton" : {
+
+    },
+    "a11y.favoriteList.emptyMessage" : {
+
+    },
+    "a11y.favoriteList.runningStatus" : {
+
+    },
+    "a11y.mainTabs.favoritesTab" : {
+
+    },
+    "a11y.mainTabs.timerTab" : {
+
+    },
+    "a11y.mainToolbar.doneButton" : {
+
+    },
+    "a11y.mainToolbar.listEditButton" : {
+
+    },
+    "a11y.mainToolbar.settingsButton" : {
+
+    },
+    "a11y.runningList.emptyMessage" : {
+
+    },
+    "a11y.settings.opensExternalLinkHint" : {
+
+    },
+    "a11y.settings.opensExternalLinkHint_EN" : {
+
+    },
+    "a11y.settings.opensSystemSettingsHint" : {
+
+    },
+    "a11y.timerRow.deleteLabel" : {
+
+    },
+    "a11y.timerRow.editLabel" : {
+
+    },
+    "a11y.timerRow.favoriteLabel" : {
+
+    },
+    "a11y.timerRow.favoriteOffHint" : {
+
+    },
+    "a11y.timerRow.favoriteOnHint" : {
+
+    },
+    "a11y.timerRow.moveToFavorite" : {
+
+    },
+    "a11y.timerRow.pauseLabel" : {
+
+    },
+    "a11y.timerRow.playLabel" : {
+
+    },
+    "a11y.timerRow.restartLabel" : {
+
+    },
+    "a11y.timerRow.startLabel" : {
+
+    },
+    "a11y.timerRow.stopLabel" : {
+
+    },
+    "Apple Watch 사용자" : {
+
+    },
+    "Apple Watch를 착용 중이라면, 알림이 Watch로 전달될 수 있습니다" : {
+
+    },
+    "Black" : {
+
+    },
+    "C: 소리X, 진동O" : {
+
+    },
+    "Custom Gray" : {
+
+    },
+    "D: 소리X, 진동X" : {
+
+    },
+    "Delivered 덤프" : {
+
+    },
+    "Gray Palette" : {
+
+    },
+    "Label Size: %@" : {
+
+    },
+    "Part 0: 1회 소리 기본 동작 검증 (햅틱: 켜짐)" : {
+
+    },
+    "Part 1: 소리 기본 동작 검증 (햅틱: 항상 재생 상태)" : {
+
+    },
+    "Part 2: 배너 기본 동작 검증" : {
+
+    },
+    "Part 3: 연속 알림 성능/UX 검증" : {
+
+    },
+    "Part 4: 최종 정책 동적 생성 검증" : {
+
+    },
+    "Pending 덤프" : {
+
+    },
+    "Privacy Policy" : {
+
+    },
+    "Quick Label Timer" : {
+
+    },
+    "Semantic Gray" : {
+
+    },
+    "Support Symbols" : {
+
+    },
+    "System Grays" : {
+
+    },
+    "UI 컴포넌트 테스트" : {
+
+    },
+    "Utilities" : {
+
+    },
+    "가설 0-1: 30초 커스텀 사운드로 로컬 알림을 1회 사용했을 때, 무음 모드일 때 진동으로 변환되어 울리는가" : {
+
+    },
+    "가설 0-2: 30초 무음 사운드로 로컬 알림을 1회 사용했을 때, 무음 모드일 때 진동으로 변환되어 울리는가" : {
+
+    },
+    "가설 1-1: 커스텀 사운드. 소리모드: 소리ㅇ 진동ㅇ. 무음모드: 소리x 진동 ㅇ" : {
+
+    },
+    "가설 1-2: 시스템 기본 사운드. 연속 알림 간격이 2초일 때 소리 텀 적당한가" : {
+
+    },
+    "가설 1-3: 무음 사운드. 소리모드: 소리x 진동ㅇ. 무음모드: 소리x 진동ㅇ" : {
+
+    },
+    "가설 1-4: sound = nil. 소리모드: 소리x 진동x. 무음모드: 소리x 진동x" : {
+
+    },
+    "가설 2-2: 제목 X(빈문자열) 본문 ㅇ 소리 X" : {
+
+    },
+    "가설 2-3: 제목 ㅇ 본문 X(빈문자열) 소리 X" : {
+
+    },
+    "가설 2-5: 고유 ID + 동일 threadID 연속 전송 시 순차 실행 및 그룹핑" : {
+
+    },
+    "가설 3-1': 1.5초 간격 적당한가" : {
+
+    },
+    "가설 3-2: 2초 간격 적당한가" : {
+
+    },
+    "가설 3-3: 예약된 연속 알림 즉시 취소 (포그라운드 didReceive에서 사용 예정)" : {
+
+    },
+    "개인정보 처리방침" : {
+
+    },
+    "결과: id가 같으면 새 알림으로 대체되어 가장 마지막 알림만 울림" : {
+
+    },
+    "결과: Suspended 상태에서 미실행. iOS 정책상 미지원으로 판단" : {
+
+    },
+    "결과: Title은 프로젝트 이름으로 뜸" : {
+
+    },
+    "결과: 가설 2-1 실패로 3-4 철회" : {
+
+    },
+    "결과: 너무 빨라" : {
+
+    },
+    "권한 요청" : {
+
+    },
+    "기본 사운드" : {
+
+    },
+    "기본 상태 (수정 / 재생)" : {
+
+    },
+    "기본 알림 방식" : {
+
+    },
+    "기본 점검 항목" : {
+
+    },
+    "기존 (스피커)" : {
+
+    },
+    "다크 모드" : {
+
+    },
+    "디자인 1: 단일 아이콘" : {
+
+    },
+    "디자인 2: 단일 색상 점" : {
+
+    },
+    "디자인 3: 3개 아이콘" : {
+
+    },
+    "디자인 4: 채워진 링" : {
+
+    },
+    "라벨" : {
+
+    },
+    "라벨 입력 (비워두면 자동 생성)" : {
+
+    },
+    "라벨/시간 폰트 테스트" : {
+
+    },
+    "무음" : {
+
+    },
+    "문의하기" : {
+
+    },
+    "분" : {
+
+    },
+    "삭제" : {
+
+    },
+    "삭제 불가" : {
+
+    },
+    "샘플 타이머" : {
+
+    },
+    "설정" : {
+
+    },
+    "설정 덤프" : {
+
+    },
+    "설정에서 알림 허용하기" : {
+
+    },
+    "소리" : {
+
+    },
+    "소리가 안 들려요" : {
+
+    },
+    "시간" : {
+
+    },
+    "시스템 설정 확인" : {
+
+    },
+    "신규 (종)" : {
+
+    },
+    "실행 불가" : {
+
+    },
+    "실행 중 (멈춤 / 일시정지)" : {
+
+    },
+    "실행 중인 타이머는 삭제할 수 없습니다." : {
+
+    },
+    "아이콘 후보 비교" : {
+
+    },
+    "알람 디버그" : {
+
+    },
+    "알림 권한" : {
+
+    },
+    "알림 방식 (기본)" : {
+
+    },
+    "알림 설정" : {
+
+    },
+    "알림 설정 열기" : {
+
+    },
+    "알림 소리가 나지 않나요?" : {
+
+    },
+    "알림 시스템 종합 검증 🧪" : {
+
+    },
+    "양치 타이머" : {
+
+    },
+    "완료됨 (즐겨찾기 이동 / 재시작)" : {
+
+    },
+    "이 타이머를 삭제하시겠습니까?" : {
+
+    },
+    "인디케이터 디자인 비교" : {
+
+    },
+    "저장 불가" : {
+
+    },
+    "전체 클리어" : {
+
+    },
+    "즐겨찾기" : {
+
+    },
+    "즐겨찾기는 최대 20개까지 추가할 수 있습니다." : {
+
+    },
+    "지원" : {
+
+    },
+    "진동" : {
+
+    },
+    "진동 문제 해결" : {
+
+    },
+    "진동이 안 울려요" : {
+
+    },
+    "집중 모드 확인" : {
+
+    },
+    "초" : {
+
+    },
+    "취소" : {
+
+    },
+    "타이머 수정" : {
+
+    },
+    "타이머 실행" : {
+
+    },
+    "타이머는 최대 %lld개까지 실행할 수 있습니다." : {
+
+    },
+    "테스트 0-1: 커스텀 사운드 " : {
+
+    },
+    "테스트 0-2: 무음 사운드 " : {
+
+    },
+    "테스트 1-1: 커스텀 사운드 " : {
+
+    },
+    "테스트 1-2: 시스템 사운드 " : {
+
+    },
+    "테스트 1-3: 무음 사운드 " : {
+
+    },
+    "테스트 1-4: 사운드 없음" : {
+
+    },
+    "테스트 2-2: 본문만" : {
+
+    },
+    "테스트 2-3: 제목만" : {
+
+    },
+    "테스트 2-5: threadID 그룹핑 알림" : {
+
+    },
+    "테스트 3-1': 1.5초 간격" : {
+
+    },
+    "테스트 3-2: 2초 간격" : {
+
+    },
+    "테스트 3-3: 연속 알림 즉시 취소" : {
+
+    },
+    "현재 상태" : {
+
+    },
+    "확인" : {
+
+    }
   },
   "version" : "1.1"
 }
