--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -624,50 +624,326 @@
         }
       }
     },
-    "Apple Watch 사용자": {},
-    "Apple Watch를 착용 중이라면, 알림이 Watch로 전달될 수 있습니다": {},
-    "Privacy Policy": {},
-    "Quick Label Timer": {},
-    "개인정보 처리방침": {},
-    "기본 사운드": {},
-    "기본 알림 방식": {},
-    "기본 점검 항목": {},
-    "다크 모드": {},
-    "라벨": {},
-    "라벨 입력 (비워두면 자동 생성)": {},
-    "무음": {},
-    "문의하기": {},
-    "분": {},
-    "삭제": {},
-    "삭제 불가": {},
-    "설정": {},
-    "설정에서 알림 허용하기": {},
-    "소리": {},
-    "소리가 안 들려요": {},
-    "시간": {},
-    "시스템 설정 확인": {},
-    "실행 불가": {},
-    "실행 중인 타이머는 삭제할 수 없습니다.": {},
-    "알림 권한": {},
-    "알림 설정": {},
-    "알림 설정 열기": {},
-    "알림 소리가 나지 않나요?": {},
-    "이 타이머를 삭제하시겠습니까?": {},
-    "저장 불가": {},
-    "즐겨찾기": {},
-    "즐겨찾기는 최대 20개까지 추가할 수 있습니다.": {},
-    "지원": {},
-    "진동": {},
-    "진동 문제 해결": {},
-    "진동이 안 울려요": {},
-    "집중 모드 확인": {},
-    "초": {},
-    "취소": {},
-    "타이머 수정": {},
-    "타이머 실행": {},
-    "타이머는 최대 %lld개까지 실행할 수 있습니다.": {},
-    "현재 상태": {},
-    "확인": {}
+    "ui.common.appName": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Quick Label Timer"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Quick Label Timer"
+          }
+        }
+      }
+    },
+    "ui.settings.alarmModeTitle": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Default Alarm Mode"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "기본 알림 방식"
+          }
+        }
+      }
+    },
+    "ui.settings.contact": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Contact Us"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "문의하기"
+          }
+        }
+      }
+    },
+    "ui.settings.currentStatus": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Current Status"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "현재 상태"
+          }
+        }
+      }
+    },
+    "ui.settings.darkMode": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Dark Mode"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "다크 모드"
+          }
+        }
+      }
+    },
+    "ui.settings.defaultSound": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Default Sound"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "기본 사운드"
+          }
+        }
+      }
+    },
+    "ui.settings.enableNotifications": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Enable Notifications in Settings"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "설정에서 알림 허용하기"
+          }
+        }
+      }
+    },
+    "ui.settings.notificationSection": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Notification Settings"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "알림 설정"
+          }
+        }
+      }
+    },
+    "ui.settings.permissionSection": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Notification Permission"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "알림 권한"
+          }
+        }
+      }
+    },
+    "ui.settings.privacyPolicy": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Privacy Policy"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "개인정보 처리방침"
+          }
+        }
+      }
+    },
+    "ui.settings.soundHelp": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Can't Hear Sound"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "소리가 안 들려요"
+          }
+        }
+      }
+    },
+    "ui.settings.statusAuthorized": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Authorized"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "허용됨"
+          }
+        }
+      }
+    },
+    "ui.settings.statusDenied": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Denied"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "거부됨"
+          }
+        }
+      }
+    },
+    "ui.settings.statusEphemeral": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Ephemeral"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "일시적 세션"
+          }
+        }
+      }
+    },
+    "ui.settings.statusNotDetermined": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Not Requested"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "미요청"
+          }
+        }
+      }
+    },
+    "ui.settings.statusProvisional": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Provisional"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "임시 허용"
+          }
+        }
+      }
+    },
+    "ui.settings.statusUnknown": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Unknown"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "알 수 없음"
+          }
+        }
+      }
+    },
+    "ui.settings.supportSection": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Support"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "지원"
+          }
+        }
+      }
+    },
+    "ui.settings.title": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Settings"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "설정"
+          }
+        }
+      }
+    },
+    "ui.settings.vibrationHelp": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Vibration Not Working"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "진동이 안 울려요"
+          }
+        }
+      }
+    },
   },
   "version": "1.1"
 }
