--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -944,6 +944,294 @@
         }
       }
     },
+    "ui.help.appleWatchUsers": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Apple Watch Users"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Apple Watch 사용자"
+          }
+        }
+      }
+    },
+    "ui.help.appleWatchVibrationText": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "If you're wearing an Apple Watch, notifications may be delivered to your Watch"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Apple Watch를 착용 중이라면, 알림이 Watch로 전달될 수 있습니다"
+          }
+        }
+      }
+    },
+    "ui.help.appleWatchHapticText": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Check if the haptic strength is sufficient in **Watch app > My Watch > Sounds & Haptics**"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "**Watch 앱 > 나의 시계 > 사운드 및 햅틱**에서 '촉각' 강도가 충분한지 확인하세요"
+          }
+        }
+      }
+    },
+    "ui.help.basicChecklist": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Basic Checklist"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "기본 점검 항목"
+          }
+        }
+      }
+    },
+    "ui.help.checkMuteMode": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Is your device set to **silent mode**?"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "기기가 **무음 모드**로 설정되어 있지는 않나요?"
+          }
+        }
+      }
+    },
+    "ui.help.checkVolume": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Is your device's **volume** at 0?"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "기기의 **볼륨**이 0 이지는 않나요?"
+          }
+        }
+      }
+    },
+    "ui.help.focusModeCheck": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Check Focus Mode"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "집중 모드 확인"
+          }
+        }
+      }
+    },
+    "ui.help.focusModeText": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Check if an active mode in **Settings > Focus** is blocking notifications"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "**설정 > 집중 모드**에서 활성화된 모드가 알림을 차단하고 있지 않은지 확인해 주세요"
+          }
+        }
+      }
+    },
+    "ui.help.focusModeVibrationText": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Check if an active mode in **Settings > Focus** is blocking notifications/vibrations"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "**설정 > 집중 모드**에서 활성화된 모드가 알림/진동을 차단하지 않는지 확인해 주세요"
+          }
+        }
+      }
+    },
+    "ui.help.notificationPathText": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Go to **Settings > Notifications > QuickLabelTimer** and check if 'Allow Notifications' and 'Sounds' are enabled"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "**설정 > 알림 > 퀵라벨타이머** 로 이동해 '알림 허용'과 '사운드'가 켜져 있는지 확인해 주세요"
+          }
+        }
+      }
+    },
+    "ui.help.openNotificationSettings": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Open Notification Settings"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "알림 설정 열기"
+          }
+        }
+      }
+    },
+    "ui.help.soundIntro": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "iOS notification sounds are controlled by **system settings**.  \nIf you can't hear notification sounds, please check the following items."
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "iOS 알림의 소리 출력은 **시스템 설정에 따라 동작**합니다.  \n알림 소리가 들리지 않는다면 아래 항목을 확인해 주세요."
+          }
+        }
+      }
+    },
+    "ui.help.soundIssueTitle": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Not Hearing Notification Sound?"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "알림 소리가 나지 않나요?"
+          }
+        }
+      }
+    },
+    "ui.help.systemSettings": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Check System Settings"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "시스템 설정 확인"
+          }
+        }
+      }
+    },
+    "ui.help.vibrationAccessibilityText": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Go to **Settings > Accessibility > Touch** and check if 'Vibration' is enabled"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "**설정 > 손쉬운 사용 > 터치**로 이동해 '진동'이 켜져 있는지 확인해 주세요"
+          }
+        }
+      }
+    },
+    "ui.help.vibrationHapticText": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Go to **Settings > Sounds & Haptics** and check the following:\n  **•** 'Play Haptics in Ring Mode' is enabled\n  **•** 'Play Haptics in Silent Mode' is enabled\n  **•** 'System Haptics' is enabled"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "**설정 > 사운드 및 햅틱**으로 이동해 아래 항목을 확인해 주세요\n  **•** '벨소리 모드에서 햅틱 재생'이 켜져 있는지\n  **•** '무음 모드에서 햅틱 재생'이 켜져 있는지\n  **•** '시스템 햅틱'이 켜져 있는지"
+          }
+        }
+      }
+    },
+    "ui.help.vibrationIntro": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "iOS notification vibration (haptics) behavior **varies based on system settings**.  \nIf you don't feel vibrations, please check the following items."
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "iOS 알림의 진동(햅틱) 동작은 **시스템 설정에 따라 달라**집니다.  \n진동이 느껴지지 않는다면 아래 항목을 확인해 주세요."
+          }
+        }
+      }
+    },
+    "ui.help.vibrationIssueTitle": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Troubleshoot Vibration"
+          }
+        },
+        "ko": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "진동 문제 해결"
+          }
+        }
+      }
+    },
   },
   "version": "1.1"
 }
