refactor: rename main and running timer views for clarity
- Rename MainTabView to MainView
- Rename RunningListView to RunningTimersView
- Rename RunningListViewModel to RunningTimersViewModel

--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -394,7 +394,8 @@
         }
       }
     },
-    "a11y.runningList.emptyMessage" : {
+    "a11y.runningTimers.emptyMessage" : {
+      "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -1614,7 +1615,8 @@
         }
       }
     },
-    "ui.runningList.title" : {
+    "ui.runningTimers.title" : {
+      "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
